succesfully connected queue so that 2 videos consequitively pop up after anther

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -7,6 +7,6 @@
 <br>
 <button id="playBtn">play</button>
 <br>
-<div id="playerBox" class="hideBox">
+<div id="ytapiplayer" class="hideBox">
 </div>
 
