--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,12 +1,14 @@
-<p>
-  <label for="amount">Select your cram level:</label>
-  <input type="text" id="cram-amt" readonly />
-</p>
+<div>
+  <p>
+    <label for="amount">Select your cram level:</label>
+    <input type="text" id="cram-amt" readonly />
+  </p>
 
-<div id="slider"></div>
-<br>
-<button id="playBtn">play</button>
-<br>
+  <div id="slider"></div>
+  <br>
+  <button id="playBtn">play</button>
+  <br>
+</div>
 <div id="ytapiplayer" class="hideBox">
 </div>
 
