added radio background to the div. made the bar responsive and aligned the slider to the background image slider

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,14 +1,16 @@
-<div>
+<div id="radio">
   <p>
     <label for="amount">Select your cram level:</label>
+    <br><br><br><br><br><br><br><br>
     <input type="text" id="cram-amt" readonly />
   </p>
 
   <div id="slider"></div>
-  <br>
+  <br><br><br><br><br><br><br><br><br><br>
   <button id="playBtn">play</button>
   <br>
 </div>
+
 <div id="ytapiplayer" class="hideBox">
 </div>
 
