--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,27 @@
 .hidden {
   display: none;
 }
+
+body {
+  width: 100%;
+  height: 100%;
+}
+
+#radio {
+  margin:0 auto;
+  background-color: black;
+  width: 80%;
+  /*height: 80%;*/
+  background-position: absolute;
+  background-image:url("radio.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position:center;
+
+
+}
+
+#slider {
+  margin:0 auto;
+  width: 50%;
+}
