finished styling 1)knob is colored 2)play button is styled 3) peach cream radio has a font 4)levels are in oraange

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,16 +1,25 @@
 <div id="radio">
-  <p>
-    <label for="amount">Select your cram level:</label>
-    <br><br><br><br><br><br><br><br>
-    <input type="text" id="cram-amt" readonly />
-  </p>
-
+  <label for="amount">PeachCram Radio</label>
+  <br>
+  <input type="text" id="cram-amt" readonly />
+  <br><br><br><br><br><br><br><br><br>
   <div id="slider"></div>
-  <br><br><br><br><br><br><br><br><br><br>
-  <button id="playBtn">play</button>
+  <br><br><br><br><br>
+  <br><br><br><br>
+  <center>
+  <button id="playBtn">PLAY</button>
+  </center>
   <br>
 </div>
 
 <div id="ytapiplayer" class="hideBox">
 </div>
+
+
+
+
+
+
+
+
 
