--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,14 @@
  *= require_tree .
  */
 
+
+label {
+  font-family: 'Lato', sans-serif;
+  font-weight: bolder;
+  color:white;
+  font-style: italic;
+  font-size: 1.2em;
+}
 .hidden {
   display: none;
 }
@@ -38,4 +46,55 @@ body {
 #slider {
   margin:0 auto;
   width: 50%;
+}
+
+
+
+input {
+  background-color: black;
+}
+
+#playBtn {
+  -moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+  box-shadow:inset 0px 1px 0px 0px #ffffff;
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f9f9f9), color-stop(1, #e9e9e9) );
+  background:-moz-linear-gradient( center top, #f9f9f9 5%, #e9e9e9 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f9f9f9', endColorstr='#e9e9e9');
+  background-color:#f9f9f9;
+  -webkit-border-top-left-radius:31px;
+  -moz-border-radius-topleft:31px;
+  border-top-left-radius:31px;
+  -webkit-border-top-right-radius:31px;
+  -moz-border-radius-topright:31px;
+  border-top-right-radius:31px;
+  -webkit-border-bottom-right-radius:31px;
+  -moz-border-radius-bottomright:31px;
+  border-bottom-right-radius:31px;
+  -webkit-border-bottom-left-radius:31px;
+  -moz-border-radius-bottomleft:31px;
+  border-bottom-left-radius:31px;
+  text-indent:0px;
+  border:1px solid #dcdcdc;
+  display:inline-block;
+  color:#666666;
+  font-family:Arial;
+  font-size:10px;
+  font-weight:bold;
+  font-style:italic;
+  height:15px;
+  line-height:12px;
+  width:120px;
+  text-decoration:none;
+  text-align:center;
+  text-shadow:1px 1px 0px #ffffff;
+}
+#playBtn:hover {
+  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #e9e9e9), color-stop(1, #f9f9f9) );
+  background:-moz-linear-gradient( center top, #e9e9e9 5%, #f9f9f9 100% );
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e9e9e9', endColorstr='#f9f9f9');
+  background-color:#e9e9e9;
+}#playBtn:active {
+  position:relative;
+  top:1px;
 }
