--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,8 +32,9 @@ body {
 #radio {
   margin:0 auto;
   background-color: black;
-  width: 80%;
+  /*width: 80%;*/
   /*height: 80%;*/
+  width: 350px;
   background-position: absolute;
   background-image:url("radio.jpg");
   background-size: 100%;
