hide the playbutton after it is clicked

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -5,10 +5,9 @@
   <br><br><br><br><br><br><br><br><br>
   <div id="slider"></div>
   <br><br><br><br><br>
-  <br><br><br><br>
-  <center>
+  <br><br><br><br><center>
   <button id="playBtn">PLAY</button>
-  </center>
+  <br>
   <br>
 </div>
 
