added popup windows and instructions still need styling

--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -1,10 +1,11 @@
 <div id="radio">
-  <label for="amount">PeachCram Radio</label>
+  <label for="amount">PeachCram Radio</label><br><br>
+  <%= link_to('Channel Guide',guide_path,{id:'guide'}) %>
   <br>
   <input type="text" id="cram-amt" readonly />
-  <br><br><br><br><br><br><br><br><br>
+  <br><br><br><br><br><br><br><br>
   <div id="slider"></div>
-  <br><br><br><br><br>
+  <br><br><br><br><br><br>
   <br><br><br><br><center>
   <button id="playBtn">PLAY</button>
   <br>
