--- a/app/views/layouts/pages.html.erb
+++ b/app/views/layouts/pages.html.erb
@@ -2,14 +2,14 @@
 <html>
 <head>
   <title>Peach Cram</title>
-  <link href='http://fonts.googleapis.com/css?family=Lustria|Lato:300,400,900italic' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,900italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="jquery-ui.css">
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/swfobject/2.2/swfobject.js"></script>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class="<%= 'guide-page' if @guide_page %>">
 
   <%= yield %>
 <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
